# OCRContext

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_quickstart.py  02_refine_openai.py  03_structured_invoice.py  04_local_ollama.py  image_smoke_test.py  pdf_smoke_test.py  structured_smoke_test.py
src/ocrcontext/: __init__.py  analyzer.py  cli.py  config.py  exceptions.py  loaders.py  pipeline.py  quality.py  schemas.py  types.py
src/ocrcontext/engines/: __init__.py  base.py  handwriting.py  paddle.py  pdf_text.py  registry.py  trocr.py  vision.py
src/ocrcontext/llm/: __init__.py  drift.py  extractor.py  formatting.py  literal_preserve.py  prompts.py  refiner.py  schemas.py
src/ocrcontext/preprocessing/: __init__.py  image.py
src/ocrcontext/utils/: __init__.py  files.py  lang.py
tests/: conftest.py  test_cli.py  test_langchain_loader.py  test_literal_preserve.py  test_llm.py  test_pipeline_analyzer.py  test_schemas.py  test_text_helpers.py
